load log4j in the engine